hero absolute and relative

--- a/index.css
+++ b/index.css
@@ -107,4 +107,29 @@ h1 + p {
     display: flex;
     flex-direction: row;
   }
+
+  #hero-img {
+    position: relative;
+  }
+  #hero-card-1,
+  #hero-card-2 {
+    display: inline;
+    position: absolute;
+    left: 30px;
+    width: 20%;
+  }
+  #hero-card-1 {
+    top: 30px;
+    left: 700px;
+  }
+
+  #hero-card-2 {
+    bottom: 0;
+    left: 1200px;
+  }
+  .grid-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
