--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
 body {
-  background-color: #f2f4fc;
   font-family: Roboto;
 }
 
+#page {
+  background-color: #f2f4fc;
+}
 #navbar-menu a {
   text-decoration: none;
   color: #6b708d;
@@ -21,6 +23,17 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  color: #514d67;
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+}
+
+h3 {
+  font-size: 40px;
+  font-weight: 700;
+}
 h1 + p {
   color: #6b708d;
   font-size: 17px;
@@ -91,6 +104,36 @@ h1 + p {
   display: none;
 }
 
+.img-project {
+  width: 30%;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+}
+.card {
+  background-color: #ffffff;
+  width: 100%;
+  padding-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.card h3,
+.card p,
+.card a {
+  padding-left: 30px;
+}
+.img-project {
+  width: 100%;
+}
+
+.card > a {
+  text-decoration: none;
+  color: #072ac8;
+  font-weight: 400;
+}
+
 @media screen and (min-width: 790px) {
   h1 {
     font-size: 60px;
@@ -124,12 +167,26 @@ h1 + p {
   }
 
   #hero-card-2 {
-    bottom: 0;
+    top: 600px;
     left: 1200px;
   }
   .grid-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+  }
+  .card-container {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .card {
+    margin-right: 20px;
+    width: 340px;
+  }
+
+  .img-project {
+    height: 240px;
+    width: 340px;
   }
 }
