--- a/index.css
+++ b/index.css
@@ -185,14 +185,13 @@ h1 + p {
 .services-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
 }
 
 .card-services {
   background-color: #ffffff;
-  margin-right: 40px;
+  margin-bottom: 40px;
   padding: 40px;
-  width: 340px;
+  width: 90%;
   height: 260px;
 }
 
