--- a/index.css
+++ b/index.css
@@ -34,6 +34,20 @@ h3 {
   font-size: 40px;
   font-weight: 700;
 }
+
+.body-24 {
+  font-size: 24px;
+  font-weight: 500;
+  color: #6b708d;
+}
+
+.body-20 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #292e47;
+  text-align: center;
+}
+
 h1 + p {
   color: #6b708d;
   font-size: 17px;
@@ -140,7 +154,7 @@ h1 + p {
   background-color: #292e47;
   align-items: center;
   position: relative;
-  min-height: 622px;
+  height: 100%;
 }
 
 #grey-box {
@@ -231,39 +245,41 @@ h1 + p {
   text-align: left;
 }
 
+#contact_section {
+  margin: 0 -38px;
+}
 #mail-container {
   height: 500px;
   background-color: #ffc600;
   padding-top: 136px;
 }
 
-.body-20 {
-  font-size: 20px;
-  font-weight: 400;
-  color: #292e47;
-  text-align: center;
-}
-
 #email_input {
-  width: 393px;
+  width: 100%;
   height: 80px;
   font-size: 17px;
   background-image: url("/midtermproject/project-assets/newsletter/icon/mail.svg");
   background-repeat: no-repeat;
+  background-position: 30px 25px;
+}
+#email_input::placeholder {
+  padding-left: 70px;
 }
 
 #email-form {
   align-self: center;
   margin-top: 50px;
+  width: 400px;
 }
 
 #submit {
-  width: 198px;
+  width: 100%;
   height: 80px;
   background-color: #072ac8;
   color: #ffffff;
   font-size: 17px;
   font-weight: 500;
+  margin-top: 20px;
 }
 
 #mail-container {
@@ -290,6 +306,33 @@ h1 + p {
   text-decoration: none;
   font-size: 17px;
   color: #6b708d;
+}
+
+#project-subhead {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#completion {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#date {
+  color: #6b708d;
+  margin-left: 5px;
+}
+
+#img-article {
+  width: 100%;
+  height: 444px;
+  object-fit: cover;
+}
+
+.article-text {
+  text-align: left;
 }
 
 @media screen and (min-width: 790px) {
@@ -354,7 +397,14 @@ h1 + p {
     height: 240px;
     width: 340px;
   }
-
+  .box-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #292e47;
+    align-items: center;
+    position: relative;
+    min-height: 622px;
+  }
   #emoji-top-left {
     visibility: visible;
     position: absolute;
@@ -401,5 +451,22 @@ h1 + p {
     margin: 0 10px;
     padding: 40px;
     height: 360px;
+  }
+
+  #email_input {
+    width: 393px;
+    height: 80px;
+    font-size: 17px;
+    background-image: url("/midtermproject/project-assets/newsletter/icon/mail.svg");
+    background-repeat: no-repeat;
+  }
+
+  #submit {
+    width: 198px;
+    height: 80px;
+    background-color: #072ac8;
+    color: #ffffff;
+    font-size: 17px;
+    font-weight: 500;
   }
 }
