--- a/index.css
+++ b/index.css
@@ -69,6 +69,14 @@ h1 + p {
   justify-content: space-between;
 }
 
+.navbar-desktop {
+  display: none;
+}
+
+.hamburger {
+  display: block;
+}
+
 #contact {
   display: none;
 }
@@ -420,6 +428,20 @@ h1 + p {
 }
 
 @media screen and (min-width: 790px) {
+  .hamburger {
+    display: none;
+    cursor: pointer;
+  }
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: white;
+  }
+
   h1 {
     font-size: 60px;
   }
