--- a/index.css
+++ b/index.css
@@ -405,7 +405,7 @@ a.home-nav {
 #img-article {
   width: 100%;
   height: 444px;
-  object-fit: cover;
+  object-fit: contain;
   filter: drop-shadow(0 0 0.75rem #8644dd);
 }
 
